// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`default setup 1`] = `
Object {
  "Resources": Object {
    "ImageRepositoryBBCBC9DF": Object {
      "DeletionPolicy": "Retain",
      "Type": "AWS::ECR::Repository",
      "UpdateReplacePolicy": "Retain",
    },
  },
}
`;

exports[`forceDelete 1`] = `
Object {
  "Resources": Object {
    "AWS679f53fac002430cb0da5b7982bd22872D164C4C": Object {
      "DependsOn": Array [
        "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
      ],
      "Properties": Object {
        "Code": Any<Object>,
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
            "Arn",
          ],
        },
        "Runtime": "nodejs18.x",
        "Timeout": 120,
      },
      "Type": "AWS::Lambda::Function",
    },
    "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "ImageRepositoryBBCBC9DF": Object {
      "DeletionPolicy": "Delete",
      "Type": "AWS::ECR::Repository",
      "UpdateReplacePolicy": "Delete",
    },
    "ImageRepositoryForceImageRepositoryDeletion90140ED1": Object {
      "DeletionPolicy": "Delete",
      "DependsOn": Array [
        "ImageRepositoryForceImageRepositoryDeletionCustomResourcePolicy1A1933F8",
      ],
      "Properties": Object {
        "Delete": Object {
          "Fn::Join": Array [
            "",
            Array [
              "{\\"service\\":\\"ECR\\",\\"action\\":\\"deleteRepository\\",\\"parameters\\":{\\"repositoryName\\":\\"",
              Object {
                "Ref": "ImageRepositoryBBCBC9DF",
              },
              "\\",\\"force\\":true},\\"physicalResourceId\\":{\\"id\\":\\"",
              Object {
                "Fn::GetAtt": Array [
                  "ImageRepositoryBBCBC9DF",
                  "Arn",
                ],
              },
              "\\"}}",
            ],
          ],
        },
        "InstallLatestAwsSdk": true,
        "ServiceToken": Object {
          "Fn::GetAtt": Array [
            "AWS679f53fac002430cb0da5b7982bd22872D164C4C",
            "Arn",
          ],
        },
      },
      "Type": "Custom::ECRForceImageRepositoryDeletion",
      "UpdateReplacePolicy": "Delete",
    },
    "ImageRepositoryForceImageRepositoryDeletionCustomResourcePolicy1A1933F8": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "ecr:DeleteRepository",
              "Effect": "Allow",
              "Resource": Object {
                "Fn::GetAtt": Array [
                  "ImageRepositoryBBCBC9DF",
                  "Arn",
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "ImageRepositoryForceImageRepositoryDeletionCustomResourcePolicy1A1933F8",
        "Roles": Array [
          Object {
            "Ref": "AWS679f53fac002430cb0da5b7982bd2287ServiceRoleC1EA0FF2",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
  },
}
`;

exports[`onFinding 1`] = `
Object {
  "Resources": Object {
    "AlarmTopicD01E77F9": Object {
      "Type": "AWS::SNS::Topic",
    },
    "ImageRepositoryBBCBC9DF": Object {
      "DeletionPolicy": "Retain",
      "Properties": Object {
        "ImageScanningConfiguration": Object {
          "ScanOnPush": true,
        },
      },
      "Type": "AWS::ECR::Repository",
      "UpdateReplacePolicy": "Retain",
    },
    "ImageRepositorySevierityFilterF442A020": Object {
      "DependsOn": Array [
        "ImageRepositorySevierityFilterServiceRoleDefaultPolicyAFA4D8E3",
        "ImageRepositorySevierityFilterServiceRole7A5C269E",
      ],
      "Properties": Object {
        "Code": Any<Object>,
        "Handler": "index.handler",
        "Role": Object {
          "Fn::GetAtt": Array [
            "ImageRepositorySevierityFilterServiceRole7A5C269E",
            "Arn",
          ],
        },
        "Runtime": "nodejs18.x",
      },
      "Type": "AWS::Lambda::Function",
    },
    "ImageRepositorySevierityFilterServiceRole7A5C269E": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "ManagedPolicyArns": Array [
          Object {
            "Fn::Join": Array [
              "",
              Array [
                "arn:",
                Object {
                  "Ref": "AWS::Partition",
                },
                ":iam::aws:policy/service-role/AWSLambdaBasicExecutionRole",
              ],
            ],
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "ImageRepositorySevierityFilterServiceRoleDefaultPolicyAFA4D8E3": Object {
      "Properties": Object {
        "PolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sns:Publish",
              "Effect": "Allow",
              "Resource": Object {
                "Ref": "AlarmTopicD01E77F9",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "PolicyName": "ImageRepositorySevierityFilterServiceRoleDefaultPolicyAFA4D8E3",
        "Roles": Array [
          Object {
            "Ref": "ImageRepositorySevierityFilterServiceRole7A5C269E",
          },
        ],
      },
      "Type": "AWS::IAM::Policy",
    },
    "ImageRepositoryfinding97FFACE3": Object {
      "Properties": Object {
        "EventPattern": Object {
          "detail": Object {
            "repository-name": Array [
              Object {
                "Ref": "ImageRepositoryBBCBC9DF",
              },
            ],
            "scan-status": Array [
              "COMPLETE",
            ],
          },
          "detail-type": Array [
            "ECR Image Scan",
          ],
          "source": Array [
            "aws.ecr",
          ],
        },
        "State": "ENABLED",
        "Targets": Array [
          Object {
            "Arn": Object {
              "Fn::GetAtt": Array [
                "ImageRepositorySevierityFilterF442A020",
                "Arn",
              ],
            },
            "Id": "Target0",
            "InputTransformer": Object {
              "InputPathsMap": Object {
                "account": "$.account",
                "detail-finding-severity-counts": "$.detail.finding-severity-counts",
                "detail-image-digest": "$.detail.image-digest",
                "detail-image-tags": "$.detail.image-tags",
                "detail-repository-name": "$.detail.repository-name",
                "region": "$.region",
                "time": "$.time",
              },
              "InputTemplate": Object {
                "Fn::Join": Array [
                  "",
                  Array [
                    "{\\"account\\":<account>,\\"region\\":<region>,\\"time\\":<time>,\\"repositoryName\\":<detail-repository-name>,\\"imageDigest\\":<detail-image-digest>,\\"imageTags\\":<detail-image-tags>,\\"findingSeveriyCounts\\":<detail-finding-severity-counts>,\\"severity\\":\\"CRITICAL\\",\\"alarmTopicArn\\":\\"",
                    Object {
                      "Ref": "AlarmTopicD01E77F9",
                    },
                    "\\"}",
                  ],
                ],
              },
            },
          },
        ],
      },
      "Type": "AWS::Events::Rule",
    },
    "ImageRepositoryfindingAllowEventRuleImageRepositorySevierityFilter52214491E942FBF8": Object {
      "Properties": Object {
        "Action": "lambda:InvokeFunction",
        "FunctionName": Object {
          "Fn::GetAtt": Array [
            "ImageRepositorySevierityFilterF442A020",
            "Arn",
          ],
        },
        "Principal": "events.amazonaws.com",
        "SourceArn": Object {
          "Fn::GetAtt": Array [
            "ImageRepositoryfinding97FFACE3",
            "Arn",
          ],
        },
      },
      "Type": "AWS::Lambda::Permission",
    },
  },
}
`;
